k8s/overlays/staging/api-node/patches/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-api-deployment
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: movie-api
          image: ghcr.io/twilight4/api-node
